--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-`css
 /****** General ***********/
 * {
     font-family: 'Raleway', sans-serif;
@@ -90,6 +89,7 @@ a:hover{
 
 .hebergements-cards{
     display: flex;
+    justify-content: space-between;
 }
 
 .hebergement-card img {
@@ -112,8 +112,7 @@ a:hover{
 .hebergements-cards img {
     width: 33%;
     height: 136px;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+
 }
 
 .hebergements-cards .cartes-textes {
@@ -125,8 +124,29 @@ a:hover{
     box-sizing: border-box;
 }
 
+    .hebergements-cards{
+        margin: 24px 0;
+    }
+    .hebergements-cards-card{
+        width: 30%;
+        background-color: #ffffff;
+        border-radius: 20px;
+        padding: 5px;
+    }
+    .hebergements-cards-card article{
+        width: 100%;
+    }
+    .hebergements-cards-card article img{
+        width: 100%;
+    }
 
-/****** Populaires ***********/
+    .afficher-plus{
+        display: flex;
+        align-items: center;
+    }
+
+
+
 .populaires {
     width: 32%;
 }
@@ -174,7 +194,7 @@ a:hover{
 
 
 
-/* Le code ci-dessous correspond à la version responsive uniquement */
+/* Le code ci-dessous correspond Ã  la version responsive uniquement */
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
@@ -266,3 +286,79 @@ a:hover{
     padding: 5px 9px;
 }
 
+
+/****** Activités ***********/
+
+.activites{
+    width: 100%;
+    
+}
+.activites-cartes{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.activites-cartes img{
+    width: 297.5px;
+    height: 439px;
+    radius: 20px;
+    border-top-left-radius:  20px;
+    border-top-right-radius: 20px;
+    object-fit: cover;
+    
+}
+
+.activites-cartes .card-activites{
+    display: flex;
+    flex-direction: column;
+}
+
+.card-content-activite{
+    padding:20px, 19px, 20px, 19px;
+    radius: 0px, 0px, 20px, 20px;
+    gap: 10px;
+    width: 297.5px;
+    height: 59px;
+}
+
+.activites-cards .card-title{
+    margin-top: 10px;
+    margin-bottom: 4px;
+    size: 16px;
+}
+
+/****** Footer ***********/
+
+.footer{
+    background-color: #F2F2F2;
+}
+
+.link-footer{
+    display: flex;
+}
+
+.footer-cards-title{
+    display: flex;
+    justify-content: space-between;
+    size: 18px;
+}
+
+.footer-content{
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-content-two{
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-content-three{
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-content .footer-content-two .footer-content-three{
+    size: 16px;
+}
