--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     justify-content: center;
 }
 
+
 .main-container {
     width: 100%;
     max-width: 1440px;
@@ -58,7 +59,7 @@ a {
     color: var(--main-bg-color)
 }
 
-a:hover{
+a:hover {
     color: #0065FC;
 }
 
@@ -81,21 +82,21 @@ a:hover{
     width: 65%;
 }
 
-.hebergements-title{
+.hebergements-title {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.hebergements-cards{
+.hebergements-cards {
     display: flex;
     justify-content: space-between;
 }
 
 .hebergement-card img {
     width: 33%;
-    radius: 0px, 0px, 20px, 20px;
-    padding:20px, 19px, 20px, 19px;
+    border-radius: 0px, 0px, 20px, 20px;
+    padding: 20px, 19px, 20px, 19px;
 }
 
 .hebergement-card .card-title {
@@ -126,26 +127,29 @@ a:hover{
     box-sizing: border-box;
 }
 
-    .hebergements-cards{
-        margin: 24px 0;
-    }
-    .hebergements-cards-card{
-        width: 30%;
-        background-color: #ffffff;
-        border-radius: 20px;
-        padding: 5px;
-    }
-    .hebergements-cards-card article{
-        width: 100%;
-    }
-    .hebergements-cards-card article img{
-        width: 100%;
-    }
+.hebergements-cards {
+    margin: 24px 0;
+}
 
-    .afficher-plus{
-        display: flex;
-        align-items: center;
-    }
+.hebergements-cards-card {
+    width: 30%;
+    background-color: #ffffff;
+    border-radius: 20px;
+    padding: 5px;
+}
+
+.hebergements-cards-card article {
+    width: 100%;
+}
+
+.hebergements-cards-card article img {
+    width: 100%;
+}
+
+.afficher-plus {
+    display: flex;
+    align-items: center;
+}
 
 
 
@@ -197,40 +201,41 @@ a:hover{
 
 /****** Activités ***********/
 
-.activites{
+.activites {
     width: 100%;
-    
+
 }
-.activites-cartes{
+
+.activites-cartes {
     display: flex;
     justify-content: space-between;
 
 }
 
-.activites-cartes img{
+.activites-cartes img {
     width: 297.5px;
     height: 439px;
-    radius: 20px;
-    border-top-left-radius:  20px;
+   
+    border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     object-fit: cover;
-    
+
 }
 
-.activites-cartes .card-activites{
+.activites-cartes .card-activites {
     display: flex;
     flex-direction: column;
 }
 
-.card-content-activite{
-    padding:20px, 19px, 20px, 19px;
-    radius: 0px, 0px, 20px, 20px;
+.card-content-activite {
+    padding: 20px, 19px, 20px, 19px;
+    border-radius: 0px, 0px, 20px, 20px;
     gap: 10px;
     width: 297.5px;
     height: 59px;
 }
 
-.activites-cards .card-title{
+.activites-cards .card-title {
     margin-top: 10px;
     margin-bottom: 4px;
     size: 16px;
@@ -245,14 +250,14 @@ a:hover{
 
 /****** Footer ***********/
 
-.footer{
+.footer {
     display: flex;
     align-items: flex-start;
     justify-content: space-around;
     background-color: #F2F2F2;
 }
 
-.footer-title-one .footer-title-two .footer-title-three{
+.footer-title-one .footer-title-two .footer-title-three {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
@@ -269,6 +274,7 @@ a:hover{
     align-items: flex-start;
     flex-direction: column;
 }
+
 .footer-link-two {
     display: flex;
     align-items: center;
@@ -281,68 +287,6 @@ a:hover{
 
 
 
-
-/* Le code ci-dessous correspond Ã  la version responsive uniquement */
-
-/****** Media queries ***********/
-/* Medium devices (tablets, less/equal than 1024px) */
-@media (max-width: 1024px) {
-}
-    .hebergements-and-populaires {
-        flex-direction: column;
-    }
-
-    .hebergements {
-        width: 100%;
-        flex-direction: column;
-    }
-
-    .populaires {
-        width: 100%;
-        margin-top: 50px;
-       
-    }
-
-    .card {
-        display: flex;
-        justify-content: space-between;
-        width: auto;
-        height: auto;
-    }
-
-    .populaires-cards {
-        display: flex;
-        justify-content: space-between;
-        
-    }
-
-    .populaires-cards {
-        width: 90%;
-        height: 90%;
-
-    }
-
-    .populaires-cards .card-title {
-        font-size: 14px;
-    }
-
-    .populaires-cards .card-subtitle {
-        font-size: 13px;
-    }
-
-    .card-activites {
-        display: flex;
-        justify-content: space-around;    
-    }
-
-    .activites a{
-        width: 20%;
-    }
-
-/* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
-    /* ... */
-}
 .header {
     display: flex;
     justify-content: space-between;
@@ -365,7 +309,7 @@ a:hover{
     align-items: center;
 }
 
-.conteneur-recherche{
+.conteneur-recherche {
     display: flex;
     flex-direction: row;
 }
@@ -384,12 +328,167 @@ a:hover{
     justify-content: flex-start;
 }
 
-.filtres{
-    display: flex; 
+.filtres {
+    display: flex;
 }
 
-.boutons-filtres li{
+.boutons-filtres li {
     border: 2px solid rgb(234, 234, 234);
     border-radius: 20px;
     padding: 5px 9px;
+}
+
+/* Le code ci-dessous correspond Ã  la version responsive uniquement */
+
+/****** Media queries ***********/
+/* Medium devices (tablets, less/equal than 1024px) */
+@media (max-width: 1024px) {
+
+    .hebergements-and-populaires {
+        flex-direction: column;
+    }
+
+    .hebergements {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .populaires {
+        width: 100%;
+        margin-top: 50px;
+
+    }
+
+    .card {
+        display: flex;
+        justify-content: space-between;
+        width: auto;
+        height: auto;
+    }
+
+    .populaires-cards {
+        display: flex;
+        justify-content: space-between;
+
+    }
+
+  
+    .populaires-cards .card-title {
+        font-size: 14px;
+    }
+
+    .populaires-cards .card-subtitle {
+        font-size: 13px;
+    }
+
+    .card-activites {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    /* .activites a {
+        width: 20%;
+    } */
+
+    .main-container {
+        padding: 0px 14px;
+    }
+    .populaires-cards{
+        width: 100%;
+    }
+    .populaires-cards-card{
+        width: 32%;
+    }
+
+    .activites-cartes-card{
+        width: 23% !important;
+    }
+
+    .activites-cartes-card .card-activites{
+        width: 100%;
+    
+        /* height: 280px; */
+    }
+    .activites-cartes-card .card-activites img{
+        width: 100%;
+        height: 280px;
+    }
+}
+
+/* Small devices (phones, less than 768px) */
+@media (max-width: 767.98px) {
+
+    .header{
+        flex-direction: column;
+    }
+
+    .main-container{
+        padding: 10 10;
+    }
+
+    .logo{
+        padding: 30px;
+        gap: 10px;
+        
+    }
+
+    .filtres{
+        display: none;
+    }
+    
+    .hebergements-and-populaires{
+    display: flex;
+    flex-direction: column-reverse;
+    }
+
+    .hebergements-cards{
+        flex-direction: column;
+    }
+
+    .hebergements-cards-card{
+        width: 100%;
+    }
+
+    .populaires-cards{
+        flex-direction: column;
+    }
+
+    .populaires-cards-card{
+        width: 100%;
+    }
+
+
+    .activites-cartes{
+        flex-direction: column;
+    }
+
+    .activites-cartes-card .card-activites{
+        width: 280px;
+    }
+    
+    .section-title {
+        font-size: 1.1em;
+    }
+    
+    .footer{
+        flex-direction: column;
+        padding: 0 0 0 0px;
+    }
+
+    .footer-titres{
+        font-size: 1em;
+    }
+
+    .footer-content{
+        font-size: 0.8em
+    }
+
+    .card-title {
+        font-size: 1em;
+    }
+
+    .card-subtitle{
+        font-size: 0.9em;
+    }
+
 }
