--- a/style.css
+++ b/style.css
@@ -95,8 +95,8 @@ a:hover {
 
 .hebergement-card img {
     width: 33%;
-    border-radius: 0px, 0px, 20px, 20px;
-    padding: 20px, 19px, 20px, 19px;
+    border-top-left-radius: 19px;
+    border-top-right-radius: 19px;
 }
 
 .hebergement-card .card-title {
@@ -128,7 +128,7 @@ a:hover {
 }
 
 .hebergements-cards {
-    margin: 24px 0;
+    margin: 10px 0;
 }
 
 .hebergements-cards-card {
@@ -144,6 +144,7 @@ a:hover {
 
 .hebergements-cards-card article img {
     width: 100%;
+    object-fit: cover;
 }
 
 .afficher-plus {
@@ -273,16 +274,23 @@ a:hover {
     display: flex;
     align-items: flex-start;
     flex-direction: column;
+    margin: 10px 0;
 }
 
 .footer-link-two {
     display: flex;
     align-items: center;
+    margin: 10px 0;
 }
 
 .footer-link-three {
     display: flex;
     align-items: flex-start;
+    margin: 10px 0;
+}
+
+.footer-link-one .footer-link-two .footer-link-three{
+    margin: 10px 0;
 }
 
 
@@ -296,8 +304,7 @@ a:hover {
 .logo {
     display: flex;
     justify-content: flex-start;
-    width: 61.09px;
-    height: 19px;
+    width: 100px;
 }
 
 .menu {
@@ -401,10 +408,10 @@ a:hover {
     }
 
     .activites-cartes-card{
-        width: 23% !important;
+        width: 24% !important;
     }
 
-    .activites-cartes-card .card-activites{
+    .card-activites{
         width: 100%;
     
         /* height: 280px; */
@@ -426,12 +433,13 @@ a:hover {
         padding: 10 10;
     }
 
-    .logo{
-        padding: 30px;
-        gap: 10px;
-        
-    }
-
+    .logo{   
+        margin: 15px 0;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }       
+    
     .filtres{
         display: none;
     }
@@ -488,7 +496,7 @@ a:hover {
     }
 
     .card-subtitle{
-        font-size: 0.9em;
+        font-size: 0.9em; 
     }
 
 }
