--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ a:hover {
 .hebergements-and-populaires section {
     background-color: var(--main-bg-color);
     border-radius: 20px;
-    padding: 30px;
+    padding: 15px;
     box-sizing: border-box;
 }
 
@@ -214,7 +214,7 @@ a:hover {
 }
 
 .activites-cartes img {
-    width: 297.5px;
+    width: 100%;
     height: 439px;
    
     border-top-left-radius: 20px;
@@ -345,6 +345,10 @@ a:hover {
     padding: 5px 9px;
 }
 
+.activites-cartes-card {
+    width: 24%;
+}
+
 /* Le code ci-dessous correspond Ã  la version responsive uniquement */
 
 /****** Media queries ***********/
@@ -408,7 +412,7 @@ a:hover {
     }
 
     .activites-cartes-card{
-        width: 24% !important;
+        width: 24%;
     }
 
     .card-activites{
@@ -455,6 +459,11 @@ a:hover {
 
     .hebergements-cards-card{
         width: 100%;
+        margin: 10px 0;
+    }
+
+    .hebergements-cards{
+        margin: 0;
     }
 
     .populaires-cards{
@@ -470,8 +479,8 @@ a:hover {
         flex-direction: column;
     }
 
-    .activites-cartes-card .card-activites{
-        width: 280px;
+    .activites-cartes-card, .card-activites{
+        width: 100%;
     }
     
     .section-title {
