--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@
     color: var(--main-color);
 }
 
+.fa-location-dot {
+    color: black;
+    background-color: #F2F2F2;
+}
+
+
 body {
     display: flex;
     justify-content: center;
@@ -61,6 +67,10 @@ a {
 
 a:hover {
     color: #0065FC;
+}
+
+.boutons-filtres {
+    font-weight: bold;
 }
 
 
