--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ a:hover {
 .logo {
     display: flex;
     justify-content: flex-start;
-    width: 100px;
+    width: 120px;
 }
 
 .menu {
@@ -371,7 +371,7 @@ a:hover {
     border: 2px solid rgb(234, 234, 234);
     border-radius: 20px;
     padding: 10px;
-    width: 130px;
+    width: 150px;
     text-align: center;
 }
 
@@ -417,7 +417,7 @@ input::placeholder {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
-
+    
     .hebergements-and-populaires {
         flex-direction: column;
     }
@@ -494,12 +494,122 @@ input::placeholder {
 
 }
 
+
+
+
+#btnMobile {
+    display: none;
+}
+
+.fa-magnifying-glass {
+    color: white;
+}
+
+@media (max-width: 767.98px) {
+    #btnMobile {
+        display: block;
+        width: 60px;
+    }
+
+    #btnDesktop {
+        display: none;
+    }
+
+    nav {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+
+    nav .menu {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        gap: 0;
+    }
+
+    nav ul li {
+        width: 50%;
+        padding: 1rem 0;
+    }
+
+    nav ul li:hover {
+        border-bottom: 1px solid red;
+    }
+    input{
+        width: 180px;
+    }
+.fa-location-dot{
+    width: 40px;
+}
+
+}
+
+
+@media (min-width: 768px) {
+    #btnMobile {
+        display: none;
+    }
+
+    .logo img{
+        width: 100%;
+    }
+    
+    #btnDesktop {
+        display: block;
+        width: auto;
+        padding: 15px; 
+        font-weight: bold;
+    
+    }
+
+   
+    
+
+}
+
+.infos{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    margin: 20px;
+}
+
+.information{
+    border: 1px solid grey;
+    border-radius: 50%;
+    padding: 3px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   
+    width: 26px;
+    
+}
+.information i{
+    width: 6px;
+    height: 16px;
+    margin: 0;
+    padding: 0;
+
+}
+
+
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
 
+    *{
+        margin: 0;
+    }
 
-
-
+    .main-container{
+        padding: 0;
+    }
+    .hebergements-and-populaires section{
+        border-radius: 0;
+    }
+    
     .header {
         flex-direction: column;
     }
@@ -583,92 +693,26 @@ input::placeholder {
     }
 
 
+    .logo img{
 
-}
-
-
-
-#btnMobile {
-    display: none;
-}
-
-.fa-magnifying-glass {
-    color: white;
-}
-
-@media (max-width: 767.98px) {
-    #btnMobile {
-        display: block;
+        width: 150px;
     }
+ .footer{
+    padding: 5px 14px;
+ }
+ .conteneur,form{
+    margin: 1rem 14PX;
+ }
+ .filtres{
+    margin: 0 14px;
+ }
+ .footer-link-one{
+    margin: 14px 0;
+ }
+ .hebergements{
+    background: white !important;
+ }
+ 
 
-    #btnDesktop {
-        display: none;
-    }
-
-    nav {
-        width: 100%;
-        margin: 0;
-        padding: 0;
-    }
-
-    nav .menu {
-        width: 100%;
-        margin: 0;
-        padding: 0;
-        text-align: center;
-        gap: 0;
-    }
-
-    nav ul li {
-        width: 50%;
-        padding: 1rem 0;
-    }
-
-    nav ul li:hover {
-        border-bottom: 1px solid red;
-    }
-
-}
-
-
-@media (min-width: 768px) {
-    #btnMobile {
-        display: none;
-    }
-
-    #btnDesktop {
-        display: block;
-        width: auto;
-        padding: 15px; 
-        font-weight: bold;
     
-    }
-
-
-}
-
-.infos{
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    margin: 20px;
-}
-
-.information{
-    border: 1px solid grey;
-    border-radius: 50%;
-    padding: 3px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   
-    width: 26px;
-    
-}
-.information i{
-    width: 6px;
-    height: 16px;
-    margin: 0;
-    padding: 0;
-
 }
