--- a/style.css
+++ b/style.css
@@ -535,7 +535,7 @@ input::placeholder {
     }
 
     nav ul li:hover {
-        border-bottom: 1px solid red;
+        border-bottom: 1px solid #0065FC;
     }
     input{
         width: 180px;
