--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ a:hover {
 
 .boutons-filtres {
     font-weight: bold;
+    
 
 }
 
@@ -385,7 +386,7 @@ a:hover {
 
 .fa-location-dot {
     padding: 14px;
-    width: 20Px;
+    width: 50px;
     text-align: center;
     border-radius: 12px 0 0 12px;
 }
@@ -656,13 +657,24 @@ input::placeholder {
 
     .activites-cartes {
         flex-direction: column;
+        margin: 0 30px;
     }
 
     .activites-cartes-card,
     .card-activites {
         width: 100%;
+   
+    
     }
 
+    .activites-cartes-card .card-activites img {
+        width: 100%;
+        height: 200px;
+    }
+    .activites-title {
+        margin: 20px 15px;
+
+    }
     .section-title {
         font-size: 1.1em;
     }
@@ -682,6 +694,7 @@ input::placeholder {
 
     .card-title {
         font-size: 1em;
+
     }
 
     .card-subtitle {
